2011-02-06  Julien Danjou  <julien@danjou.info>

	* message.el (message-setup-1): Handle message-generate-headers-first
	set to t.

2011-02-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-sources): Allow for simpler defaults for Secrets
	API with a string "secrets:collection-name" and with 'default.
	(auth-source-backend-parse): Parse "secrets:collection-name" and
	'default.  Recurse on parses instead of repeating code.  Use the
	Secrets API is the source is not nil and 'ignore otherwise.  Emit a
	message when ignoring a source.
	(auth-source-search): List ignored search keys at the top level.
	(auth-source-netrc-create): Use `case' instead of `cond'.
	(auth-source-secrets-search): Created with TODOs.
	(auth-source-secrets-create): Created with TODOs.
	(auth-source-retrieve, auth-source-create, auth-source-delete)
	(auth-source-protocol-defaults, auth-source-user-or-password-imap)
	(auth-source-user-or-password-pop3, auth-source-user-or-password-ssh)
	(auth-source-user-or-password-sftp)
	(auth-source-user-or-password-smtp): Removed.
	(auth-source-user-or-password): Deprecated and modified to be a wrapper
	around `auth-source-search'.  Not tested thoroughly.

2011-02-04  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Bring in assoc and eioeio libraries.
	(secrets-enabled): New variable to track the status of the Secrets API.
	(auth-source-backend): New EIOEIO class to represent a backend.
	(auth-source-creation-defaults): New variable to set prompt defaults
	during token creation (see the `auth-source-search' docstring for
	details).
	(auth-sources): Simplify to allow a simple string as a netrc backend
	spec.
	(auth-source-backend-parse): Parse a backend from an `auth-sources' spec.
	(auth-source-backend-parse-parameters): Fill in the backend parameters.
	(auth-source-search): Main auth-source API entry point.
	(auth-source-delete): Wrapper around `auth-source-search' for deletion.